DocumentLoader: add test for fragment scroll not canceling client navigation

This is currently the case, despite the comment stating otherwise. Other browsers
behave similarly.

Added test verifies this behavior for future refactorings.

Removed navigation-interrupted-by-fragment.html, which tests the opposite.
It seems like this test was just exiting early when passing, and when navigation
took slightly less time, it timed out as seen in expectations.
Running this test manually in all major browsers does indeed navigate instead
of cancel.

Bug: 765721, 874695, 846747
Change-Id: Ibb38e60dde149715c78d9f13e1e8d3520ed7f5e6
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1804067
Reviewed-by: Nate Chapin <japhet@chromium.org>
Commit-Queue: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#696849}

Former-commit-id: 7e56957531441f7dca80e0666ede4dc2a48163f6