third_party/blink/renderer/core/loader/document_loader.cc
@@ -979,6 +979,10 @@ void DocumentLoader::CommitSameDocumentNavigationInternal(
   // If we have a provisional request for a different document, a fragment
   // scroll should cancel it.
   GetFrameLoader().DetachProvisionalDocumentLoader();
+  // TODO(dgozman): despite the comment above, next call does not actually
+  // cancel client navigation. See
+  // fragment-change-does-not-cancel-pending-navigation test. We should remove
+  // this call.
   GetFrameLoader().CancelClientNavigation();
   GetFrameLoader().DidFinishNavigation(
       FrameLoader::NavigationFinishState::kSuccess);
